SF Primes/src/objects/Recap_LMAStatus_Conditions__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ClosedCompleteField_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClosedCompleteField_Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Incomplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed Incomplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Launch_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Launch Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RdRecapComplete_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RdRecapComplete_Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartedField_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>StartedField_Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Order__c</fullName>
        <label>Status Order</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WithLMAteam_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WithLMAteam_Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkingField_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WorkingField_Check</label>
        <type>Checkbox</type>
    </fields>
    <label>Recap LMAStatus Conditions</label>
</CustomObject>